extracted gc, jmx and heap params to pom, fixed a small bug with OOM heapdump and decreased default size of heap to value suitable for non-bigdata applications